[package]
name = "onlyoffice-convert-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/jacobtread/onlyoffice-convert-server"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "../README.md"
description = "Client library for interacting with onlyoffice-convert-server"

[dependencies]
# Cheap bytes type
bytes = "1.7"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "charset",
    "multipart",
    "rustls-tls",
    "http2",
    "macos-system-configuration",
] }

# JSON and (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Asynchronous primitives
tokio = { version = "1", features = ["sync", "time", "parking_lot"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
testcontainers = { version = "0.24.0", features = ["http_wait"] }
tracing-subscriber = "0.3"
